--- a/assets/styles/scss/components/_icon.scss
+++ b/assets/styles/scss/components/_icon.scss
@@ -9,3 +9,9 @@ svg {
 }
 
 // -  <<----------<< Specific >>---------->>
+
+.icon {
+  width: $font-size--1;
+  color: $color--text;
+  fill: $color--text;
+}
