--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -7,6 +7,9 @@
 \* -------------------------------------------------------------------------- */
 
 .header {
+  &__container {
+    @include wireframe;
+  }
   // ...
 }
 
@@ -15,6 +18,9 @@
 \* -------------------------------------------------------------------------- */
 
 .hero {
+  &__container {
+    // ...
+  }
   // ...
 }
 
@@ -23,6 +29,9 @@
 \* -------------------------------------------------------------------------- */
 
 .hot-items {
+  &__container {
+    // ...
+  }
   // ...
 }
 
@@ -31,6 +40,9 @@
 \* -------------------------------------------------------------------------- */
 
 .about {
+  &__container {
+    // ...
+  }
   // ...
 }
 
@@ -39,5 +51,8 @@
 \* -------------------------------------------------------------------------- */
 
 .footer {
+  &__container {
+    // ...
+  }
   // ...
 }
