--- a/assets/styles/scss/abstracts/mixins/_box-shadows.scss
+++ b/assets/styles/scss/abstracts/mixins/_box-shadows.scss
@@ -1,5 +1,5 @@
 // -----------------------------------------------------------------------------
-// *  Box-Shadows
+// +  Box-Shadows
 // -----------------------------------------------------------------------------
 
 // #  Material Design Box-Shadow
