--- a/assets/styles/scss/abstracts/mixins/_breakpoints.scss
+++ b/assets/styles/scss/abstracts/mixins/_breakpoints.scss
@@ -1,5 +1,5 @@
 // -----------------------------------------------------------------------------
-// *  Breakpoints
+// +  Breakpoints
 // -----------------------------------------------------------------------------
 
 // #  Breakpoints
