--- a/assets/styles/scss/abstracts/mixins/_containers.scss
+++ b/assets/styles/scss/abstracts/mixins/_containers.scss
@@ -1,5 +1,5 @@
 // -----------------------------------------------------------------------------
-// *  Containers
+// +  Containers
 // -----------------------------------------------------------------------------
 
 // #  Block-Container
