--- a/assets/styles/scss/layout/_forms.scss
+++ b/assets/styles/scss/layout/_forms.scss
@@ -29,3 +29,23 @@ button {
 input {
   // ...
 }
+
+select {
+  // ...
+}
+
+optgroup {
+  // ...
+}
+
+option {
+  // ...
+}
+
+datalist {
+  // ...
+}
+
+output {
+  // ...
+}
