--- a/assets/styles/scss/abstracts/mixins/_debuggers.scss
+++ b/assets/styles/scss/abstracts/mixins/_debuggers.scss
@@ -1,8 +1,10 @@
 // -----------------------------------------------------------------------------
-// *  Debuggers
+// +  Debuggers
 // -----------------------------------------------------------------------------
 
-// #  Wireframe Debugger Manual
+// -  Wireframe Debugger Manual
+
+// #  Wireframe
 @mixin wireframe($wireframe-type: generic) {
   // #  Wireframe 1 - Generic
   @if $wireframe-type == generic {
@@ -19,4 +21,76 @@
   }
 }
 
-// #  Wireframe Debugger Manual Automatic
+// -  Wireframe Debugger Automatic
+/* stylelint-disable */
+$color--block-level-layout: grey;
+/* stylelint-enable */
+// # Base
+
+
+/*
+(c) Jan Ingemansen 2015
+This file is part of Wireframes with HTML and CSS.
+    Wireframes with HTML and CSS is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+    Wireframes with HTML and CSS is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+    You should have received a copy of the GNU General Public License
+    along with Wireframes with HTML and CSS.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
+/* WIREFRAME
+We use a dashed outline to make the wires and a transparent grey background that will make elements darker when they are on top of eachother.
+*/
+
+// span,
+// object,
+// iframe,
+// h1,
+// h2,
+// h3,
+// h4,
+// h5,
+// h6,
+// p,
+// blockquote,
+// address,
+// img,
+// ol,
+// ul,
+// li,
+// fieldset,
+// form,
+// legend,
+// table,
+// caption,
+// tbody,
+// tfoot,
+// thead,
+// tr,
+// th,
+// td,
+// article,
+// aside,
+// canvas,
+// details,
+// figcaption,
+// figure,
+// footer,
+// header,
+// hgroup,
+// menu,
+// nav,
+// section,
+// summary,
+// time,
+// mark,
+// audio,
+// video {
+//   outline: 1px #333 dashed;
+//   // background:rgba(120,120,120,0.05);
+// }
