--- a/assets/styles/scss/base/_base.scss
+++ b/assets/styles/scss/base/_base.scss
@@ -10,22 +10,16 @@ html {
 // #  <body>
 body {
   margin: 0 auto;
-  background-color: $color--background;
   color: $color--text;
   font-family: $font-family--text;
   font-size: $font-size--text;
   // font-size: calc(1rem + 0.25vh); // ---> Good idea?
   font-weight: $font-weight--text;
   line-height: $line-height--text;
+  line-height: normal;
 }
 
 // #  <main>
 main {
   // ...
-}
-
-// #  <div>
-
-div {
-  background: yellow;
 }
