--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -8,7 +8,7 @@
 
 .header {
   &__container {
-    @include wireframe;
+    // @include wireframe;
   }
   // ...
 }
@@ -18,7 +18,9 @@
 \* -------------------------------------------------------------------------- */
 
 .hero {
+  background-color: red;
   &__container {
+    background-color: red;
     // ...
   }
   // ...
