--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1,29 +1,10 @@
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 1 - `abstracts/`
 \* ========================================================================== */
-/* stylelint-disable */
-/* stylelint-enable */
-/*
-(c) Jan Ingemansen 2015
-This file is part of Wireframes with HTML and CSS.
-    Wireframes with HTML and CSS is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
-    Wireframes with HTML and CSS is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-    You should have received a copy of the GNU General Public License
-    along with Wireframes with HTML and CSS.  If not, see <http://www.gnu.org/licenses/>.
-*/
-/* WIREFRAME
-We use a dashed outline to make the wires and a transparent grey background that will make elements darker when they are on top of eachother.
-*/
 @import url("https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css");
 html {
   --fill: hsla(0, 0%, 0%, 0.5);
-  --wire: #ff0000;
+  --wire: #f00;
 }
 
 [data-wf] {
