--- a/assets/styles/scss/abstracts/mixins/_wireframes.scss
+++ b/assets/styles/scss/abstracts/mixins/_wireframes.scss
@@ -6,7 +6,7 @@
 
 html {
   --fill: hsla(0, 0%, 0%, 0.5);
-  --wire: #ff0000;
+  --wire: #f00;
 }
 
 [data-wf] {
@@ -25,26 +25,27 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(
-      to top right,
-      transparent calc(50% - 1px),
-      var(--wire) calc(50% - 1px),
-      var(--wire) calc(50% + 1px),
-      transparent calc(50% + 1px)
-    ),
-    linear-gradient(
-      to bottom right,
-      transparent calc(50% - 1px),
-      var(--wire) calc(50% - 1px),
-      var(--wire) calc(50% + 1px),
-      transparent calc(50% + 1px)
-    ),
+  background:
+    linear-gradient(to top right,
+    transparent calc(50% - 1px),
+    var(--wire) calc(50% - 1px),
+    var(--wire) calc(50% + 1px),
+    transparent calc(50% + 1px)),
+    linear-gradient(to bottom right,
+    transparent calc(50% - 1px),
+    var(--wire) calc(50% - 1px),
+    var(--wire) calc(50% + 1px),
+    transparent calc(50% + 1px)),
     var(--fill);
   color: var(--wire);
   content: attr(data-wf);
   font: bold 2em Jubilat, Georgia, serif;
-  text-shadow: 0 0 0.25em var(--fill), 0 0 0.25em var(--fill),
-    0 0 0.25em var(--fill), 0 0 0.25em var(--fill), 0 0 0.25em var(--fill);
+  text-shadow:
+    0 0 0.25em var(--fill),
+    0 0 0.25em var(--fill),
+    0 0 0.25em var(--fill),
+    0 0 0.25em var(--fill),
+    0 0 0.25em var(--fill);
 }
 
 // -  Automatic
