--- a/assets/styles/scss/layout/_nav.scss
+++ b/assets/styles/scss/layout/_nav.scss
@@ -2,6 +2,8 @@
 *  _nav.scss: This partial file contains all default 'nav' styles.
 \* -------------------------------------------------------------------------- */
 
-nav {
-  // ...
+nav ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
