--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -7,8 +7,9 @@
 \* -------------------------------------------------------------------------- */
 
 .header {
+  background-color: hsla(0, 79%, 72%, 0.5);
   &__container {
-    // @include wireframe;
+    // ...
   }
   // ...
 }
@@ -18,9 +19,7 @@
 \* -------------------------------------------------------------------------- */
 
 .hero {
-  background-color: red;
   &__container {
-    background-color: red;
     // ...
   }
   // ...
