--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -69,7 +69,7 @@ $linear-gradient--red: hsla(348, 99.8%, 47.1%, 0.8);
 
 // #  Color
 $color--subject: var(--primary-color);
-$color--section-title: var(--primary-color);
+$color--section-title: var(--secondary-color);
 $color--article-title: var(--tertiary-color);
 $color--text: var(--foreground-color);
 $color--background: var(--background-color);
