--- a/assets/styles/scss/abstracts/mixins/_wireframes.scss
+++ b/assets/styles/scss/abstracts/mixins/_wireframes.scss
@@ -12,7 +12,7 @@ html {
 [data-wf] {
   position: relative;
   z-index: 1;
-  outline: 2px solid var(--wire);
+  outline: calc(#{$size--xxs} / 2) solid var(--wire);
 }
 
 [data-wf]::before {
@@ -25,27 +25,26 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  background:
-    linear-gradient(to top right,
-    transparent calc(50% - 1px),
-    var(--wire) calc(50% - 1px),
-    var(--wire) calc(50% + 1px),
-    transparent calc(50% + 1px)),
-    linear-gradient(to bottom right,
-    transparent calc(50% - 1px),
-    var(--wire) calc(50% - 1px),
-    var(--wire) calc(50% + 1px),
-    transparent calc(50% + 1px)),
+  background: linear-gradient(
+      to top right,
+      transparent calc(50% - 1px),
+      var(--wire) calc(50% - 1px),
+      var(--wire) calc(50% + 1px),
+      transparent calc(50% + 1px)
+    ),
+    linear-gradient(
+      to bottom right,
+      transparent calc(50% - 1px),
+      var(--wire) calc(50% - 1px),
+      var(--wire) calc(50% + 1px),
+      transparent calc(50% + 1px)
+    ),
     var(--fill);
   color: var(--wire);
   content: attr(data-wf);
   font: bold 2em Jubilat, Georgia, serif;
-  text-shadow:
-    0 0 0.25em var(--fill),
-    0 0 0.25em var(--fill),
-    0 0 0.25em var(--fill),
-    0 0 0.25em var(--fill),
-    0 0 0.25em var(--fill);
+  text-shadow: 0 0 0.25em var(--fill), 0 0 0.25em var(--fill),
+    0 0 0.25em var(--fill), 0 0 0.25em var(--fill), 0 0 0.25em var(--fill);
 }
 
 // -  Automatic
@@ -65,7 +64,7 @@ h6,
 main,
 nav,
 section {
-  outline: calc(#{$size--xxs} / 2) $color--text dashed;
+  outline: calc(#{$size--xxs} / 2) red dashed;
 }
 
 // #  Text Content
@@ -81,7 +80,7 @@ ol,
 p,
 pre,
 ul {
-  outline: calc(#{$size--xxs} / 3) $color--article-title dashed;
+  outline: calc(#{$size--xxs} / 3) green dashed;
 }
 
 // #  Inline elements
@@ -108,5 +107,5 @@ u,
 video,
 time,
 span {
-  outline: calc(#{$size--xxs} / 4) $color--article-title dashed;
+  outline: calc(#{$size--xxs} / 4) blue dashed;
 }
