style-main: header v2

--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -403,15 +403,31 @@ input:checked + .slider::before {
 /* -------------------------------------------------------------------------- *\
 -  Section-1: Hero
 \* -------------------------------------------------------------------------- */
+.hero {
+  background-color: rgba(145, 238, 145, 0.5);
+}
+
 /* -------------------------------------------------------------------------- *\
 -  Section-2: Hot Items
 \* -------------------------------------------------------------------------- */
+.hot-items {
+  background-color: rgba(255, 184, 194, 0.5);
+}
+
 /* -------------------------------------------------------------------------- *\
 -  Section-3: About
 \* -------------------------------------------------------------------------- */
+.about {
+  background-color: rgba(173, 216, 230, 0.5);
+}
+
 /* -------------------------------------------------------------------------- *\
 -  Footer-Main: Footer
 \* -------------------------------------------------------------------------- */
+.footer {
+  background-color: rgba(255, 255, 224, 0.5);
+}
+
 /* -------------------------------------------------------------------------- *\
 *  _login.scss: This partial file contains the styles of the 'login' page.
 \* -------------------------------------------------------------------------- */
