--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -19,6 +19,7 @@
 \* -------------------------------------------------------------------------- */
 
 .hero {
+  background-color: hsla(120, 73%, 75%, 0.5);
   &__container {
     // ...
   }
@@ -30,6 +31,7 @@
 \* -------------------------------------------------------------------------- */
 
 .hot-items {
+  background-color: hsla(351, 100%, 86%, 0.5);
   &__container {
     // ...
   }
@@ -41,6 +43,7 @@
 \* -------------------------------------------------------------------------- */
 
 .about {
+  background-color: hsla(195, 53%, 79%, 0.5);
   &__container {
     // ...
   }
@@ -52,6 +55,7 @@
 \* -------------------------------------------------------------------------- */
 
 .footer {
+  background-color: hsla(60, 100%, 94%, 0.5);
   &__container {
     // ...
   }
