--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -121,7 +121,13 @@ span {
 /* -------------------------------------------------------------------------- *\
 *  _base.scss: This partial file contains the custom `base` HTML tags
 \* -------------------------------------------------------------------------- */
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
+  min-width: calc(20rem - 1px);
   margin: 0 auto;
   color: var(--foreground-color);
   font-family: "Roboto", sans-serif;
@@ -129,6 +135,55 @@ body {
   font-weight: 300;
   line-height: 1.5;
   line-height: normal;
+}
+
+@media (min-width: 20rem) {
+  body {
+    padding: 0 0.25rem;
+  }
+}
+
+@media (min-width: 40rem) {
+  body {
+    padding: 0 0.5rem;
+  }
+}
+
+@media (min-width: 60rem) {
+  body {
+    padding: 0 1rem;
+  }
+}
+
+@media (min-width: 80rem) {
+  body {
+    padding: 0 1.5rem;
+  }
+}
+
+@media (min-width: 100rem) {
+  body {
+    padding: 0 2rem;
+  }
+}
+
+@media (min-width: 120rem) {
+  body {
+    padding: 0 3rem;
+  }
+}
+
+@media (min-width: 140rem) {
+  body {
+    padding: 0 4rem;
+  }
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -144,7 +199,7 @@ h1 {
   font-variant: normal;
   font-weight: 700;
   letter-spacing: 0.025rem;
-  line-height: 1.2;
+  line-height: 1;
   text-align: center;
   text-transform: uppercase;
 }
@@ -156,7 +211,7 @@ h2 {
   font-variant: normal;
   font-weight: 400;
   letter-spacing: 0.05rem;
-  line-height: -1;
+  line-height: 1;
   text-align: center;
   text-transform: capitalize;
 }
@@ -225,23 +280,6 @@ a:focus {
 /* -------------------------------------------------------------------------- *\
 *  _header.scss: This partial file contains all default 'header' styles.
 \* -------------------------------------------------------------------------- */
-header {
-  position: fixed;
-  z-index: 3;
-  top: 0;
-  left: 0;
-  width: 100%;
-  margin: 0 auto;
-  background: var(--background-color);
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-  transition: background 0.3s, -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
-  -webkit-transition: background 0.3s, -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
-  transition: transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1), background 0.3s;
-  transition: transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1), background 0.3s, -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
-  will-change: transform;
-}
-
 /* -------------------------------------------------------------------------- *\
 *  _nav.scss: This partial file contains all default 'nav' styles.
 \* -------------------------------------------------------------------------- */
@@ -257,11 +295,6 @@ nav ul {
 /* -------------------------------------------------------------------------- *\
 *  _section.scss: This partial file contains all default 'section' styles.
 \* -------------------------------------------------------------------------- */
-section {
-  min-width: 20rem;
-  padding: 1rem;
-}
-
 section:first-of-type {
   height: 100vh;
 }
@@ -397,7 +430,37 @@ input:checked + .slider::before {
 -  Header-Main: Header
 \* -------------------------------------------------------------------------- */
 .header {
-  background-color: rgba(240, 127, 127, 0.5);
+  min-width: 320px;
+  background-color: rgba(191, 64, 64, 0.5);
+}
+
+.header__container {
+  background-color: rgba(106, 191, 64, 0.5);
+}
+
+@media (min-width: 20rem) {
+  .header__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    padding: 0.25rem;
+    margin: 0 auto;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 0.5rem;
+    margin: 0 auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+    background-color: yellow;
+  }
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -426,6 +489,36 @@ input:checked + .slider::before {
 \* -------------------------------------------------------------------------- */
 .footer {
   background-color: rgba(255, 255, 224, 0.5);
+}
+
+.footer__container {
+  min-width: calc(20rem - 1px);
+  background-color: rgba(106, 191, 64, 0.5);
+}
+
+@media (min-width: 20rem) {
+  .footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    padding: 0.25rem;
+    margin: 0 auto;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 0.5rem;
+    margin: 0 auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+    background-color: yellow;
+  }
 }
 
 /* -------------------------------------------------------------------------- *\
