--- a/assets/styles/scss/abstracts/mixins/_containers.scss
+++ b/assets/styles/scss/abstracts/mixins/_containers.scss
@@ -2,31 +2,90 @@
 // +  Containers
 // -----------------------------------------------------------------------------
 
+// display: flex;
+// width: 100%;
+// max-width: calc(($dimension--#{$breakpoint}) - ($size--#{$breakpoint} * 2));
+// padding: ($size--#{$breakpoint});
+// margin: 0 auto;
+
+// *  <<----------<< Section-Container >>---------->>
+
+// #  Breakpoints
+@mixin section-container($breakpoint) {
+  // #  Breakpoint 1 - Extra Extra Small - 20rem / 320px
+  @if $breakpoint == xxs {
+    @media (min-width: $dimension--xxs) {
+      display: flex;
+      width: 100%;
+      // max-width: 312px;
+      padding: $size--xxs;
+      margin: 0 auto;
+      @content;
+    }
+  }
+  // #  Breakpoint 2 - Extra Small - 40rem / 640px
+  @else if $breakpoint == xs {
+    @media (min-width: $dimension--xs) {
+      @content;
+    }
+  }
+  // #  Breakpoint 3 - Small - 60rem / 960px
+  @else if $breakpoint == s {
+    @media (min-width: $dimension--s) {
+      @content;
+    }
+  }
+  // #  Breakpoint 4 - Medium - 80rem / 1280px
+  @else if $breakpoint == m {
+    @media (min-width: $dimension--m) {
+      @content;
+    }
+  }
+  // #  Breakpoint 5 - Large - 100rem / 1600px
+  @else if $breakpoint == l {
+    @media (min-width: $dimension--l) {
+      @content;
+    }
+  }
+  // #  Breakpoint 6 - Extra Large - 120rem / 1920px
+  @else if $breakpoint == xl {
+    @media (min-width: $dimension--xl) {
+      @content;
+    }
+  }
+  // #  Breakpoint 7 - Extra Extra Large - 140rem / 2240px
+  @else if $breakpoint == xxl {
+    @media (min-width: $dimension--xxl) {
+      @content;
+    }
+  }
+  // #  Invalid arguments!
+  @else {
+    @error '#{$breakpoint} is an unsupported breakpoint, choose betweens: xxs, xs, s, m, l, xl, xxl.';
+  }
+}
+
+// *  <<----------<< Specific >>---------->>
+
 // #  Block-Container
-@mixin block-container($max-width: fit-content, $max-height: fit-content) {
+@mixin block-container($max-width: fit-content) {
   display: block;
   width: 100%;
   max-width: $max-width;
-  height: 100%;
-  max-height: $max-height;
   padding: $size--xs;
   margin: 0 auto;
 }
 
 // #  Flex-Container ---> Parent
 @mixin flex-container(
-  $direction,
-  $justify,
-  $align,
+  $direction: column,
+  $justify: center,
+  $align: center,
   $wrap-type: nowrap,
-  $max-width: fit-content,
-  $max-height: fit-content
+  $max-width: fit-content
 ) {
   display: flex;
-  width: 100%;
-  max-width: $max-width;
-  height: 100%;
-  max-height: $max-height;
+  // width: 100%;
   align-items: $align;
   justify-content: $justify;
   padding: $size--xs;
