--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -7,8 +7,17 @@
 \* -------------------------------------------------------------------------- */
 
 .header {
-  background-color: hsla(0, 79%, 72%, 0.5);
+  min-width: 320px;
+  background-color: hsla(0, 50%, 50%, 0.5);
+
   &__container {
+    background-color: hsla(100, 50%, 50%, 0.5);
+
+    @include section-container(xxs) {
+      @include flex-container();
+
+      background-color: yellow;
+    }
     // ...
   }
   // ...
@@ -20,6 +29,7 @@
 
 .hero {
   background-color: hsla(120, 73%, 75%, 0.5);
+
   &__container {
     // ...
   }
@@ -32,6 +42,7 @@
 
 .hot-items {
   background-color: hsla(351, 100%, 86%, 0.5);
+
   &__container {
     // ...
   }
@@ -44,6 +55,7 @@
 
 .about {
   background-color: hsla(195, 53%, 79%, 0.5);
+
   &__container {
     // ...
   }
@@ -56,7 +68,16 @@
 
 .footer {
   background-color: hsla(60, 100%, 94%, 0.5);
+
   &__container {
+    min-width: calc(#{$dimension--xxs} - 1px);
+    background-color: hsla(100, 50%, 50%, 0.5);
+
+    @include section-container(xxs) {
+      @include flex-container();
+
+      background-color: yellow;
+    }
     // ...
   }
   // ...
