--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -39,8 +39,10 @@
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 5 - `components/`
 \* ========================================================================== */
-@import 'components/card';
+@import 'components/box';
+@import 'components/image';
 @import 'components/icon';
+@import 'components/card';
 @import 'components/switch';
 
 /* ========================================================================== *\
